Version 3.0.5 Implement Gamesports API fully (i hope so)