@@ -1,6 +1,6 @@
 package de.zahrie.trues.api.riot.xayah.types.core.championmastery;
 
-import java.util.Arrays;
+import java.io.Serial;
 import java.util.List;
 
 import org.joda.time.DateTime;
@@ -17,8 +17,8 @@ import de.zahrie.trues.api.riot.xayah.types.core.staticdata.Champion;
 import de.zahrie.trues.api.riot.xayah.types.core.summoner.Summoner;
 
 public class ChampionMastery extends GhostObject<de.zahrie.trues.api.riot.xayah.types.data.championmastery.ChampionMastery> implements Comparable<ChampionMastery> {
-    public static class Builder {
-        public class SubBuilder {
+    public static final class Builder {
+        public final class SubBuilder {
             private final Champion champion;
 
             private SubBuilder(final Champion champion) {
@@ -46,6 +46,7 @@ public class ChampionMastery extends GhostObject<de.zahrie.trues.api.riot.xayah.
     }
 
     public static final String CHAMPION_MASTERY_LOAD_GROUP = "champion-mastery";
+    @Serial
     private static final long serialVersionUID = -4377419492958529379L;
 
     public static Builder forSummoner(final Summoner summoner) {
@@ -108,9 +109,7 @@ public class ChampionMastery extends GhostObject<de.zahrie.trues.api.riot.xayah.
 
     @Override
     protected List<String> getLoadGroups() {
-        return Arrays.asList(new String[] {
-            CHAMPION_MASTERY_LOAD_GROUP
-        });
+        return List.of(CHAMPION_MASTERY_LOAD_GROUP);
     }
 
     public Platform getPlatform() {
@@ -163,27 +162,23 @@ public class ChampionMastery extends GhostObject<de.zahrie.trues.api.riot.xayah.
 
     @Override
     protected void loadCoreData(final String group) {
-        ImmutableMap.Builder<String, Object> builder;
-        switch(group) {
-            case CHAMPION_MASTERY_LOAD_GROUP:
-                builder = ImmutableMap.builder();
-                if(coreData.getSummonerId() != null) {
-                    builder.put("summonerId", coreData.getSummonerId());
-                }
-                if(coreData.getChampionId() != 0) {
-                    builder.put("championId", coreData.getChampionId());
-                }
-                if(coreData.getPlatform() != null) {
-                    builder.put("platform", Platform.withTag(coreData.getPlatform()));
-                }
-                final de.zahrie.trues.api.riot.xayah.types.data.championmastery.ChampionMastery data =
-                    Orianna.getSettings().getPipeline().get(de.zahrie.trues.api.riot.xayah.types.data.championmastery.ChampionMastery.class, builder.build());
-                if(data != null) {
-                    coreData = data;
-                }
-                break;
-            default:
-                break;
+        final ImmutableMap.Builder<String, Object> builder;
+      if (group.equals(CHAMPION_MASTERY_LOAD_GROUP)) {
+        builder = ImmutableMap.builder();
+        if (coreData.getSummonerId() != null) {
+          builder.put("summonerId", coreData.getSummonerId());
         }
+        if (coreData.getChampionId() != 0) {
+          builder.put("championId", coreData.getChampionId());
+        }
+        if (coreData.getPlatform() != null) {
+          builder.put("platform", Platform.withTag(coreData.getPlatform()));
+        }
+        final de.zahrie.trues.api.riot.xayah.types.data.championmastery.ChampionMastery data =
+            Orianna.getSettings().getPipeline().get(de.zahrie.trues.api.riot.xayah.types.data.championmastery.ChampionMastery.class, builder.build());
+        if (data != null) {
+          coreData = data;
+        }
+      }
     }
 }
