@@ -1,15 +1,12 @@
 package de.zahrie.trues.api.riot.xayah.types.core.match;
 
+import java.io.Serial;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.joda.time.Duration;
-
-import com.google.common.base.Function;
 import com.google.common.base.Supplier;
 import com.google.common.base.Suppliers;
 import com.google.common.collect.ImmutableMap;
@@ -32,9 +29,10 @@ import de.zahrie.trues.api.riot.xayah.types.core.GhostObject;
 import de.zahrie.trues.api.riot.xayah.types.core.searchable.SearchableList;
 import de.zahrie.trues.api.riot.xayah.types.core.searchable.SearchableLists;
 import de.zahrie.trues.api.riot.xayah.types.core.staticdata.Item;
+import org.joda.time.Duration;
 
 public class Timeline extends GhostObject.ListProxy<Frame, de.zahrie.trues.api.riot.xayah.types.data.match.Frame, de.zahrie.trues.api.riot.xayah.types.data.match.Timeline> {
-    public static class Builder {
+    public static final class Builder {
         private final long id;
         private Platform platform;
 
@@ -68,6 +66,7 @@ public class Timeline extends GhostObject.ListProxy<Frame, de.zahrie.trues.api.r
     }
 
     public class Event extends de.zahrie.trues.api.riot.xayah.types.core.match.Event {
+        @Serial
         private static final long serialVersionUID = -245827734492071363L;
 
         private final Supplier<Item> after = Suppliers.memoize(() -> {
@@ -77,24 +76,24 @@ public class Timeline extends GhostObject.ListProxy<Frame, de.zahrie.trues.api.r
             return Item.withId(coreData.getAfterId()).get();
         });
 
-        private final Supplier<SearchableList<Participant>> assistingParticipants = Suppliers.memoize(new Supplier<SearchableList<Participant>>() {
-            @Override
-            public SearchableList<Participant> get() {
-                if(coreData.getAssistingParticipants() == null) {
-                    return null;
-                }
-                if(coreData.getAssistingParticipants().isEmpty()) {
-                    return SearchableLists.empty();
-                }
-                match.get().getVersion(); // Force match load so participants have IDs
-                final List<Participant> assistingParticipants = new ArrayList<>(coreData.getAssistingParticipants().size());
-                for(final Participant participant : match.get().getParticipants()) {
-                    if(coreData.getAssistingParticipants().contains(participant.getCoreData().getParticipantId())) {
-                        assistingParticipants.add(participant);
-                    }
-                }
-                return SearchableLists.unmodifiableFrom(assistingParticipants);
+        private final Supplier<SearchableList<Participant>> assistingParticipants = Suppliers.memoize(new Supplier<>() {
+          @Override
+          public SearchableList<Participant> get() {
+            if (coreData.getAssistingParticipants() == null) {
+              return null;
             }
+            if (coreData.getAssistingParticipants().isEmpty()) {
+              return SearchableLists.empty();
+            }
+            match.get().getVersion(); // Force match load so participants have IDs
+            final List<Participant> assistingParticipants = new ArrayList<>(coreData.getAssistingParticipants().size());
+            for (final Participant participant : match.get().getParticipants()) {
+              if (coreData.getAssistingParticipants().contains(participant.getCoreData().getParticipantId())) {
+                assistingParticipants.add(participant);
+              }
+            }
+            return SearchableLists.unmodifiableFrom(assistingParticipants);
+          }
         });
 
         private final Supplier<Item> before = Suppliers.memoize(() -> {
@@ -104,20 +103,20 @@ public class Timeline extends GhostObject.ListProxy<Frame, de.zahrie.trues.api.r
             return Item.withId(coreData.getBeforeId()).get();
         });
 
-        private final Supplier<Participant> creator = Suppliers.memoize(new Supplier<Participant>() {
-            @Override
-            public Participant get() {
-                if(coreData.getCreatorId() == 0) {
-                    return null;
-                }
-                match.get().getVersion(); // Force match load so participants have IDs
-                for(final Participant participant : match.get().getParticipants()) {
-                    if(participant.getCoreData().getParticipantId() == coreData.getCreatorId()) {
-                        return participant;
-                    }
-                }
-                return null;
+        private final Supplier<Participant> creator = Suppliers.memoize(new Supplier<>() {
+          @Override
+          public Participant get() {
+            if (coreData.getCreatorId() == 0) {
+              return null;
             }
+            match.get().getVersion(); // Force match load so participants have IDs
+            for (final Participant participant : match.get().getParticipants()) {
+              if (participant.getCoreData().getParticipantId() == coreData.getCreatorId()) {
+                return participant;
+              }
+            }
+            return null;
+          }
         });
 
         private final Supplier<Item> item = Suppliers.memoize(() -> {
@@ -127,36 +126,36 @@ public class Timeline extends GhostObject.ListProxy<Frame, de.zahrie.trues.api.r
             return Item.withId(coreData.getItemId()).get();
         });
 
-        private final Supplier<Participant> killer = Suppliers.memoize(new Supplier<Participant>() {
-            @Override
-            public Participant get() {
-                if(coreData.getKillerId() == 0) {
-                    return null;
-                }
-                match.get().getVersion(); // Force match load so participants have IDs
-                for(final Participant participant : match.get().getParticipants()) {
-                    if(participant.getCoreData().getParticipantId() == coreData.getKillerId()) {
-                        return participant;
-                    }
-                }
-                return null;
+        private final Supplier<Participant> killer = Suppliers.memoize(new Supplier<>() {
+          @Override
+          public Participant get() {
+            if (coreData.getKillerId() == 0) {
+              return null;
             }
+            match.get().getVersion(); // Force match load so participants have IDs
+            for (final Participant participant : match.get().getParticipants()) {
+              if (participant.getCoreData().getParticipantId() == coreData.getKillerId()) {
+                return participant;
+              }
+            }
+            return null;
+          }
         });
 
-        private final Supplier<Participant> participant = Suppliers.memoize(new Supplier<Participant>() {
-            @Override
-            public Participant get() {
-                if(coreData.getParticipantId() == 0) {
-                    return null;
-                }
-                match.get().getVersion(); // Force match load so participants have IDs
-                for(final Participant participant : match.get().getParticipants()) {
-                    if(participant.getCoreData().getParticipantId() == coreData.getParticipantId()) {
-                        return participant;
-                    }
-                }
-                return null;
+        private final Supplier<Participant> participant = Suppliers.memoize(new Supplier<>() {
+          @Override
+          public Participant get() {
+            if (coreData.getParticipantId() == 0) {
+              return null;
             }
+            match.get().getVersion(); // Force match load so participants have IDs
+            for (final Participant participant : match.get().getParticipants()) {
+              if (participant.getCoreData().getParticipantId() == coreData.getParticipantId()) {
+                return participant;
+              }
+            }
+            return null;
+          }
         });
 
         private final Supplier<Position> position = Suppliers.memoize(() -> {
@@ -166,30 +165,30 @@ public class Timeline extends GhostObject.ListProxy<Frame, de.zahrie.trues.api.r
             return new Position(coreData.getPosition());
         });
 
-        private final Supplier<Team> team = Suppliers.memoize(new Supplier<Team>() {
-            @Override
-            public Team get() {
-                if(coreData.getTeam() == 0) {
-                    return null;
-                }
-                return coreData.getTeam() == Side.BLUE.getId() ? match.get().getBlueTeam() : match.get().getRedTeam();
+        private final Supplier<Team> team = Suppliers.memoize(new Supplier<>() {
+          @Override
+          public Team get() {
+            if (coreData.getTeam() == 0) {
+              return null;
             }
+            return coreData.getTeam() == Side.BLUE.getId() ? match.get().getBlueTeam() : match.get().getRedTeam();
+          }
         });
 
-        private final Supplier<Participant> victim = Suppliers.memoize(new Supplier<Participant>() {
-            @Override
-            public Participant get() {
-                if(coreData.getVictimId() == 0) {
-                    return null;
-                }
-                match.get().getVersion(); // Force match load so participants have IDs
-                for(final Participant participant : match.get().getParticipants()) {
-                    if(participant.getCoreData().getParticipantId() == coreData.getVictimId()) {
-                        return participant;
-                    }
-                }
-                return null;
+        private final Supplier<Participant> victim = Suppliers.memoize(new Supplier<>() {
+          @Override
+          public Participant get() {
+            if (coreData.getVictimId() == 0) {
+              return null;
             }
+            match.get().getVersion(); // Force match load so participants have IDs
+            for (final Participant participant : match.get().getParticipants()) {
+              if (participant.getCoreData().getParticipantId() == coreData.getVictimId()) {
+                return participant;
+              }
+            }
+            return null;
+          }
         });
 
         public Event(final de.zahrie.trues.api.riot.xayah.types.data.match.Event coreData) {
@@ -313,31 +312,32 @@ public class Timeline extends GhostObject.ListProxy<Frame, de.zahrie.trues.api.r
     }
 
     public class Frame extends de.zahrie.trues.api.riot.xayah.types.core.match.Frame {
+        @Serial
         private static final long serialVersionUID = -7952210236371512933L;
 
-        private final Supplier<Map<Participant, ParticipantFrame>> participantFrames = Suppliers.memoize(new Supplier<Map<Participant, ParticipantFrame>>() {
-            @Override
-            public Map<Participant, ParticipantFrame> get() {
-                if(coreData.getParticipantFrames() == null) {
-                    return null;
-                }
-                if(coreData.getParticipantFrames().isEmpty()) {
-                    return Collections.emptyMap();
-                }
-                match.get().getVersion(); // Force match load so participants have IDs
-                final Map<Participant, ParticipantFrame> participantFrames = new HashMap<>(coreData.getParticipantFrames().size());
-                for(final Participant participant : match.get().getParticipants()) {
-                    if(coreData.getParticipantFrames().containsKey(participant.getCoreData().getParticipantId())) {
-                        participantFrames.put(participant,
-                            new ParticipantFrame(coreData.getParticipantFrames().get(participant.getCoreData().getParticipantId())));
-                    }
-                }
-                return Collections.unmodifiableMap(participantFrames);
+        private final Supplier<Map<Participant, ParticipantFrame>> participantFrames = Suppliers.memoize(new Supplier<>() {
+          @Override
+          public Map<Participant, ParticipantFrame> get() {
+            if (coreData.getParticipantFrames() == null) {
+              return null;
             }
+            if (coreData.getParticipantFrames().isEmpty()) {
+              return Collections.emptyMap();
+            }
+            match.get().getVersion(); // Force match load so participants have IDs
+            final Map<Participant, ParticipantFrame> participantFrames = new HashMap<>(coreData.getParticipantFrames().size());
+            for (final Participant participant : match.get().getParticipants()) {
+              if (coreData.getParticipantFrames().containsKey(participant.getCoreData().getParticipantId())) {
+                participantFrames.put(participant,
+                    new ParticipantFrame(coreData.getParticipantFrames().get(participant.getCoreData().getParticipantId())));
+              }
+            }
+            return Collections.unmodifiableMap(participantFrames);
+          }
         });
 
         public Frame(final de.zahrie.trues.api.riot.xayah.types.data.match.Frame coreData) {
-            super(coreData, data -> new Event(data));
+            super(coreData, Event::new);
         }
 
         @Override
@@ -351,6 +351,7 @@ public class Timeline extends GhostObject.ListProxy<Frame, de.zahrie.trues.api.r
         }
     }
 
+    @Serial
     private static final long serialVersionUID = -3153365065219231927L;
 
     public static Builder withId(final long id) {
@@ -385,9 +386,7 @@ public class Timeline extends GhostObject.ListProxy<Frame, de.zahrie.trues.api.r
 
     @Override
     protected List<String> getLoadGroups() {
-        return Arrays.asList(new String[] {
-            LIST_PROXY_LOAD_GROUP
-        });
+        return List.of(LIST_PROXY_LOAD_GROUP);
     }
 
     public Match getMatch() {
@@ -404,25 +403,21 @@ public class Timeline extends GhostObject.ListProxy<Frame, de.zahrie.trues.api.r
 
     @Override
     protected void loadCoreData(final String group) {
-        ImmutableMap.Builder<String, Object> builder;
-        switch(group) {
-            case LIST_PROXY_LOAD_GROUP:
-                builder = ImmutableMap.builder();
-                if(coreData.getPlatform() != null) {
-                    builder.put("platform", Platform.withTag(coreData.getPlatform()));
-                }
-                if(coreData.getId() != 0L) {
-                    builder.put("matchId", coreData.getId());
-                }
-                final de.zahrie.trues.api.riot.xayah.types.data.match.Timeline data =
-                    Orianna.getSettings().getPipeline().get(de.zahrie.trues.api.riot.xayah.types.data.match.Timeline.class, builder.build());
-                if(data != null) {
-                    coreData = data;
-                }
-                loadListProxyData(data1 -> new Frame(data1));
-                break;
-            default:
-                break;
+        final ImmutableMap.Builder<String, Object> builder;
+      if (group.equals(LIST_PROXY_LOAD_GROUP)) {
+        builder = ImmutableMap.builder();
+        if (coreData.getPlatform() != null) {
+          builder.put("platform", Platform.withTag(coreData.getPlatform()));
         }
+        if (coreData.getId() != 0L) {
+          builder.put("matchId", coreData.getId());
+        }
+        final de.zahrie.trues.api.riot.xayah.types.data.match.Timeline data =
+            Orianna.getSettings().getPipeline().get(de.zahrie.trues.api.riot.xayah.types.data.match.Timeline.class, builder.build());
+        if (data != null) {
+          coreData = data;
+        }
+        loadListProxyData(Frame::new);
+      }
     }
 }
