@@ -1,12 +1,12 @@
 package de.zahrie.trues.api.riot.xayah.types.core.staticdata;
 
+import java.io.Serial;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
-import com.google.common.base.Function;
 import com.google.common.base.Supplier;
 import com.google.common.base.Suppliers;
 import com.google.common.collect.ImmutableMap;
@@ -22,7 +22,7 @@ import de.zahrie.trues.api.riot.xayah.types.core.searchable.SearchableList;
 import de.zahrie.trues.api.riot.xayah.types.core.searchable.SearchableLists;
 
 public class Champions extends GhostObject.ListProxy<de.zahrie.trues.api.riot.xayah.types.core.staticdata.Champion, de.zahrie.trues.api.riot.xayah.types.data.staticdata.Champion, de.zahrie.trues.api.riot.xayah.types.data.staticdata.Champions> {
-    public static class Builder {
+    public static final class Builder {
         private Set<String> includedData;
         private Platform platform;
         private String version, locale;
@@ -88,7 +88,7 @@ public class Champions extends GhostObject.ListProxy<de.zahrie.trues.api.riot.xa
         }
     }
 
-    public static class SubsetBuilder {
+    public static final class SubsetBuilder {
         private Iterable<Integer> ids;
         private Set<String> includedData;
         private Iterable<String> names, keys;
@@ -182,6 +182,7 @@ public class Champions extends GhostObject.ListProxy<de.zahrie.trues.api.riot.xa
         }
     }
 
+    @Serial
     private static final long serialVersionUID = -5852031149115607129L;
 
     public static Champions get() {
@@ -272,9 +273,7 @@ public class Champions extends GhostObject.ListProxy<de.zahrie.trues.api.riot.xa
 
     @Override
     protected List<String> getLoadGroups() {
-        return Arrays.asList(new String[] {
-            LIST_PROXY_LOAD_GROUP
-        });
+        return List.of(LIST_PROXY_LOAD_GROUP);
     }
 
     public String getLocale() {
@@ -302,35 +301,31 @@ public class Champions extends GhostObject.ListProxy<de.zahrie.trues.api.riot.xa
 
     @Override
     protected void loadCoreData(final String group) {
-        ImmutableMap.Builder<String, Object> builder;
-        switch(group) {
-            case LIST_PROXY_LOAD_GROUP:
-                builder = ImmutableMap.builder();
-                if(coreData.getPlatform() != null) {
-                    builder.put("platform", Platform.withTag(coreData.getPlatform()));
-                }
-                if(coreData.getVersion() != null) {
-                    builder.put("version", coreData.getVersion());
-                }
-                if(coreData.getLocale() != null) {
-                    builder.put("locale", coreData.getLocale());
-                }
-                if(coreData.getIncludedData() != null) {
-                    builder.put("includedData", coreData.getIncludedData());
-                }
-                final de.zahrie.trues.api.riot.xayah.types.data.staticdata.Champions data =
-                    Orianna.getSettings().getPipeline().get(de.zahrie.trues.api.riot.xayah.types.data.staticdata.Champions.class, builder.build());
-                if(data != null) {
-                    coreData = data;
-                }
-                loadListProxyData(data1 -> {
-                    final Champion champion = new Champion(data1);
-                    champion.markAsGhostLoaded(Champion.CHAMPION_LOAD_GROUP);
-                    return champion;
-                });
-                break;
-            default:
-                break;
+        final ImmutableMap.Builder<String, Object> builder;
+      if (group.equals(LIST_PROXY_LOAD_GROUP)) {
+        builder = ImmutableMap.builder();
+        if (coreData.getPlatform() != null) {
+          builder.put("platform", Platform.withTag(coreData.getPlatform()));
         }
+        if (coreData.getVersion() != null) {
+          builder.put("version", coreData.getVersion());
+        }
+        if (coreData.getLocale() != null) {
+          builder.put("locale", coreData.getLocale());
+        }
+        if (coreData.getIncludedData() != null) {
+          builder.put("includedData", coreData.getIncludedData());
+        }
+        final de.zahrie.trues.api.riot.xayah.types.data.staticdata.Champions data =
+            Orianna.getSettings().getPipeline().get(de.zahrie.trues.api.riot.xayah.types.data.staticdata.Champions.class, builder.build());
+        if (data != null) {
+          coreData = data;
+        }
+        loadListProxyData(data1 -> {
+          final Champion champion = new Champion(data1);
+          champion.markAsGhostLoaded(Champion.CHAMPION_LOAD_GROUP);
+          return champion;
+        });
+      }
     }
 }
