@@ -1,6 +1,6 @@
 package de.zahrie.trues.api.riot.xayah.types.core.staticdata;
 
-import java.util.Arrays;
+import java.io.Serial;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
@@ -21,7 +21,7 @@ import de.zahrie.trues.api.riot.xayah.types.core.searchable.SearchableList;
 import de.zahrie.trues.api.riot.xayah.types.core.searchable.SearchableLists;
 
 public class Item extends GhostObject<de.zahrie.trues.api.riot.xayah.types.data.staticdata.Item> {
-    public static class Builder {
+    public static final class Builder {
         private Integer id;
         private Set<String> includedData;
         private String name, version, locale;
@@ -105,6 +105,7 @@ public class Item extends GhostObject<de.zahrie.trues.api.riot.xayah.types.data.
     }
 
     public static final String ITEM_LOAD_GROUP = "item";
+    @Serial
     private static final long serialVersionUID = 307765113960787815L;
 
     public static Builder named(final String name) {
@@ -269,9 +270,7 @@ public class Item extends GhostObject<de.zahrie.trues.api.riot.xayah.types.data.
 
     @Override
     protected List<String> getLoadGroups() {
-        return Arrays.asList(new String[] {
-            ITEM_LOAD_GROUP
-        });
+        return List.of(ITEM_LOAD_GROUP);
     }
 
     public String getLocale() {
@@ -398,37 +397,32 @@ public class Item extends GhostObject<de.zahrie.trues.api.riot.xayah.types.data.
 
     @Override
     protected void loadCoreData(final String group) {
-        ImmutableMap.Builder<String, Object> builder;
-        switch(group) {
-            case ITEM_LOAD_GROUP:
-                builder = ImmutableMap.builder();
-                if(coreData.getId() != 0) {
-                    builder.put("id", coreData.getId());
-                }
-                if(coreData.getName() != null) {
-                    builder.put("name", coreData.getName());
-                }
-                if(coreData.getPlatform() != null) {
-                    builder.put("platform", Platform.withTag(coreData.getPlatform()));
-                }
-                if(coreData.getVersion() != null) {
-                    builder.put("version", coreData.getVersion());
-                }
-                if(coreData.getLocale() != null) {
-                    builder.put("locale", coreData.getLocale());
-                }
-                if(coreData.getIncludedData() != null) {
-                    builder.put("includedData", coreData.getIncludedData());
-                }
-
-                final de.zahrie.trues.api.riot.xayah.types.data.staticdata.Item data =
-                    Orianna.getSettings().getPipeline().get(de.zahrie.trues.api.riot.xayah.types.data.staticdata.Item.class, builder.build());
-                if(data != null) {
-                    coreData = data;
-                }
-                break;
-            default:
-                break;
+        final ImmutableMap.Builder<String, Object> builder;
+      if (group.equals(ITEM_LOAD_GROUP)) {
+        builder = ImmutableMap.builder();
+        if (coreData.getId() != 0) {
+          builder.put("id", coreData.getId());
         }
+        if (coreData.getName() != null) {
+          builder.put("name", coreData.getName());
+        }
+        if (coreData.getPlatform() != null) {
+          builder.put("platform", Platform.withTag(coreData.getPlatform()));
+        }
+        if (coreData.getVersion() != null) {
+          builder.put("version", coreData.getVersion());
+        }
+        if (coreData.getLocale() != null) {
+          builder.put("locale", coreData.getLocale());
+        }
+        if (coreData.getIncludedData() != null) {
+          builder.put("includedData", coreData.getIncludedData());
+        }
+        final de.zahrie.trues.api.riot.xayah.types.data.staticdata.Item data =
+            Orianna.getSettings().getPipeline().get(de.zahrie.trues.api.riot.xayah.types.data.staticdata.Item.class, builder.build());
+        if (data != null) {
+          coreData = data;
+        }
+      }
     }
 }
