@@ -1,10 +1,10 @@
 package de.zahrie.trues.api.riot.xayah.types.core.staticdata;
 
+import java.io.Serial;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-import com.google.common.base.Function;
 import com.google.common.collect.ImmutableMap;
 import com.merakianalytics.datapipelines.iterators.CloseableIterator;
 import com.merakianalytics.datapipelines.iterators.CloseableIterators;
@@ -16,7 +16,7 @@ import de.zahrie.trues.api.riot.xayah.types.core.searchable.SearchableList;
 import de.zahrie.trues.api.riot.xayah.types.core.searchable.SearchableLists;
 
 public class Maps extends GhostObject.ListProxy<Map, de.zahrie.trues.api.riot.xayah.types.data.staticdata.Map, de.zahrie.trues.api.riot.xayah.types.data.staticdata.Maps> {
-    public static class Builder {
+    public static final class Builder {
         private Platform platform;
         private String version, locale;
 
@@ -67,7 +67,7 @@ public class Maps extends GhostObject.ListProxy<Map, de.zahrie.trues.api.riot.xa
         }
     }
 
-    public static class SubsetBuilder {
+    public static final class SubsetBuilder {
         private Iterable<Integer> ids;
         private Iterable<String> names;
         private Platform platform;
@@ -140,6 +140,7 @@ public class Maps extends GhostObject.ListProxy<Map, de.zahrie.trues.api.riot.xa
         }
     }
 
+    @Serial
     private static final long serialVersionUID = -7076727260509732625L;
 
     public static Maps get() {
@@ -196,9 +197,7 @@ public class Maps extends GhostObject.ListProxy<Map, de.zahrie.trues.api.riot.xa
 
     @Override
     protected List<String> getLoadGroups() {
-        return Arrays.asList(new String[] {
-            LIST_PROXY_LOAD_GROUP
-        });
+        return List.of(LIST_PROXY_LOAD_GROUP);
     }
 
     public String getLocale() {
@@ -226,32 +225,28 @@ public class Maps extends GhostObject.ListProxy<Map, de.zahrie.trues.api.riot.xa
 
     @Override
     protected void loadCoreData(final String group) {
-        ImmutableMap.Builder<String, Object> builder;
-        switch(group) {
-            case LIST_PROXY_LOAD_GROUP:
-                builder = ImmutableMap.builder();
-                if(coreData.getPlatform() != null) {
-                    builder.put("platform", Platform.withTag(coreData.getPlatform()));
-                }
-                if(coreData.getVersion() != null) {
-                    builder.put("version", coreData.getVersion());
-                }
-                if(coreData.getLocale() != null) {
-                    builder.put("locale", coreData.getLocale());
-                }
-                final de.zahrie.trues.api.riot.xayah.types.data.staticdata.Maps data =
-                    Orianna.getSettings().getPipeline().get(de.zahrie.trues.api.riot.xayah.types.data.staticdata.Maps.class, builder.build());
-                if(data != null) {
-                    coreData = data;
-                }
-                loadListProxyData(data1 -> {
-                    final Map map = new Map(data1);
-                    map.markAsGhostLoaded(Map.MAP_LOAD_GROUP);
-                    return map;
-                });
-                break;
-            default:
-                break;
+        final ImmutableMap.Builder<String, Object> builder;
+      if (group.equals(LIST_PROXY_LOAD_GROUP)) {
+        builder = ImmutableMap.builder();
+        if (coreData.getPlatform() != null) {
+          builder.put("platform", Platform.withTag(coreData.getPlatform()));
         }
+        if (coreData.getVersion() != null) {
+          builder.put("version", coreData.getVersion());
+        }
+        if (coreData.getLocale() != null) {
+          builder.put("locale", coreData.getLocale());
+        }
+        final de.zahrie.trues.api.riot.xayah.types.data.staticdata.Maps data =
+            Orianna.getSettings().getPipeline().get(de.zahrie.trues.api.riot.xayah.types.data.staticdata.Maps.class, builder.build());
+        if (data != null) {
+          coreData = data;
+        }
+        loadListProxyData(data1 -> {
+          final Map map = new Map(data1);
+          map.markAsGhostLoaded(Map.MAP_LOAD_GROUP);
+          return map;
+        });
+      }
     }
 }
