@@ -1,6 +1,6 @@
 package de.zahrie.trues.api.riot.xayah.types.core.staticdata;
 
-import java.util.Arrays;
+import java.io.Serial;
 import java.util.List;
 
 import org.joda.time.DateTime;
@@ -13,7 +13,7 @@ import de.zahrie.trues.api.riot.xayah.types.common.Season;
 import de.zahrie.trues.api.riot.xayah.types.core.GhostObject;
 
 public class Patch extends GhostObject<de.zahrie.trues.api.riot.xayah.types.data.staticdata.Patch> implements Comparable<Patch> {
-    public static class Builder {
+    public static final class Builder {
         private String name;
         private Platform platform;
 
@@ -53,6 +53,7 @@ public class Patch extends GhostObject<de.zahrie.trues.api.riot.xayah.types.data
     }
 
     public static final String PATCH_LOAD_GROUP = "patch";
+    @Serial
     private static final long serialVersionUID = -3616467806524426695L;
 
     public static Patch get() {
@@ -97,9 +98,7 @@ public class Patch extends GhostObject<de.zahrie.trues.api.riot.xayah.types.data
 
     @Override
     protected List<String> getLoadGroups() {
-        return Arrays.asList(new String[] {
-            PATCH_LOAD_GROUP
-        });
+        return List.of(PATCH_LOAD_GROUP);
     }
 
     public String getName() {
@@ -133,26 +132,21 @@ public class Patch extends GhostObject<de.zahrie.trues.api.riot.xayah.types.data
 
     @Override
     protected void loadCoreData(final String group) {
-        ImmutableMap.Builder<String, Object> builder;
-        switch(group) {
-            case PATCH_LOAD_GROUP:
-                builder = ImmutableMap.builder();
-                if(coreData.getName() != null) {
-                    builder.put("name", coreData.getName());
-                }
-                if(coreData.getPlatform() != null) {
-                    builder.put("platform", Platform.withTag(coreData.getPlatform()));
-                }
-
-                final de.zahrie.trues.api.riot.xayah.types.data.staticdata.Patch data =
-                    Orianna.getSettings().getPipeline().get(de.zahrie.trues.api.riot.xayah.types.data.staticdata.Patch.class, builder.build());
-                if(data != null) {
-                    coreData = data;
-                }
-                break;
-            default:
-                break;
+        final ImmutableMap.Builder<String, Object> builder;
+      if (group.equals(PATCH_LOAD_GROUP)) {
+        builder = ImmutableMap.builder();
+        if (coreData.getName() != null) {
+          builder.put("name", coreData.getName());
         }
+        if (coreData.getPlatform() != null) {
+          builder.put("platform", Platform.withTag(coreData.getPlatform()));
+        }
+        final de.zahrie.trues.api.riot.xayah.types.data.staticdata.Patch data =
+            Orianna.getSettings().getPipeline().get(de.zahrie.trues.api.riot.xayah.types.data.staticdata.Patch.class, builder.build());
+        if (data != null) {
+          coreData = data;
+        }
+      }
     }
 
 }
