@@ -1,7 +1,7 @@
 package de.zahrie.trues.api.riot.xayah.types.core.staticdata;
 
+import java.io.Serial;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
@@ -22,7 +22,7 @@ import de.zahrie.trues.api.riot.xayah.types.core.searchable.SearchableList;
 import de.zahrie.trues.api.riot.xayah.types.core.searchable.SearchableLists;
 
 public class SummonerSpell extends GhostObject<de.zahrie.trues.api.riot.xayah.types.data.staticdata.SummonerSpell> {
-    public static class Builder {
+    public static final class Builder {
         private Integer id;
         private Set<String> includedData;
         private String name, version, locale;
@@ -105,6 +105,7 @@ public class SummonerSpell extends GhostObject<de.zahrie.trues.api.riot.xayah.ty
         }
     }
 
+    @Serial
     private static final long serialVersionUID = -4080746989103816773L;
     public static final String SUMMONER_SPELL_LOAD_GROUP = "summoner-spell";
 
@@ -270,9 +271,7 @@ public class SummonerSpell extends GhostObject<de.zahrie.trues.api.riot.xayah.ty
 
     @Override
     protected List<String> getLoadGroups() {
-        return Arrays.asList(new String[] {
-            SUMMONER_SPELL_LOAD_GROUP
-        });
+        return List.of(SUMMONER_SPELL_LOAD_GROUP);
     }
 
     public String getLocale() {
@@ -362,36 +361,32 @@ public class SummonerSpell extends GhostObject<de.zahrie.trues.api.riot.xayah.ty
 
     @Override
     protected void loadCoreData(final String group) {
-        ImmutableMap.Builder<String, Object> builder;
-        switch(group) {
-            case SUMMONER_SPELL_LOAD_GROUP:
-                builder = ImmutableMap.builder();
-                if(coreData.getId() != 0) {
-                    builder.put("id", coreData.getId());
-                }
-                if(coreData.getName() != null) {
-                    builder.put("name", coreData.getName());
-                }
-                if(coreData.getPlatform() != null) {
-                    builder.put("platform", Platform.withTag(coreData.getPlatform()));
-                }
-                if(coreData.getVersion() != null) {
-                    builder.put("version", coreData.getVersion());
-                }
-                if(coreData.getLocale() != null) {
-                    builder.put("locale", coreData.getLocale());
-                }
-                if(coreData.getIncludedData() != null) {
-                    builder.put("includedData", coreData.getIncludedData());
-                }
-                final de.zahrie.trues.api.riot.xayah.types.data.staticdata.SummonerSpell data =
-                    Orianna.getSettings().getPipeline().get(de.zahrie.trues.api.riot.xayah.types.data.staticdata.SummonerSpell.class, builder.build());
-                if(data != null) {
-                    coreData = data;
-                }
-                break;
-            default:
-                break;
+        final ImmutableMap.Builder<String, Object> builder;
+      if (group.equals(SUMMONER_SPELL_LOAD_GROUP)) {
+        builder = ImmutableMap.builder();
+        if (coreData.getId() != 0) {
+          builder.put("id", coreData.getId());
         }
+        if (coreData.getName() != null) {
+          builder.put("name", coreData.getName());
+        }
+        if (coreData.getPlatform() != null) {
+          builder.put("platform", Platform.withTag(coreData.getPlatform()));
+        }
+        if (coreData.getVersion() != null) {
+          builder.put("version", coreData.getVersion());
+        }
+        if (coreData.getLocale() != null) {
+          builder.put("locale", coreData.getLocale());
+        }
+        if (coreData.getIncludedData() != null) {
+          builder.put("includedData", coreData.getIncludedData());
+        }
+        final de.zahrie.trues.api.riot.xayah.types.data.staticdata.SummonerSpell data =
+            Orianna.getSettings().getPipeline().get(de.zahrie.trues.api.riot.xayah.types.data.staticdata.SummonerSpell.class, builder.build());
+        if (data != null) {
+          coreData = data;
+        }
+      }
     }
 }
